# flipper-app

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.icon  main.rs
